<resources>
    <string name="app_name">News</string>
    <string name="navigation_title">Deco news</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">WP + Android app</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="menu_category">Category</string>
    <string name="menu_bookmark">Bookmark</string>
    <string name="menu_about">About</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_send">Send</string>
    <string name="search">Search</string>
    <string name="featured_news">Featured news</string>
    <string name="recent_news">Recent news</string>
    <string name="view_all">View all</string>
    <string name="all">All</string>
    <plurals name="numberOfPosts">
        <item quantity="one">%d post</item>
        <item quantity="other">%d posts</item>
    </plurals>
    <string name="clear_all">Clear all</string>
    <string name="bookmarked_news">Bookmarked news</string>
    <string name="about_text_1">WordPress to Android News App</string>
    <string name="about_text_2">Amazing list of features</string>
    <string name="about_text_3">No need for development skills</string>
    <string name="about_text_4">Word press as Backend</string>
    <string name="about_text_5">Amazing Documentation and Support</string>
    <string name="about_text_6">Firebase Push Notifications</string>
    <string name="about_text_7">AdMob Integration</string>
    <string name="about_text_8">Light and Dark theme</string>
    <string name="about_text_9">Design files (Sketch, Adobe Xd and Photo shop)</string>
    <string name="about_text_10">Code in Kotlin</string>
    <string name="about_text_button">Purchase Now</string>
    <string name="remove_ads_button">Remove Ads</string>
    <string name="enable_push_notification">Enable push notification</string>
    <string name="testing_rtl">Testing our application with Rtl
        \n(enable)</string>
    <string name="language">Language</string>
    <string name="light_mode">Light Mode</string>
    <string name="dark_mode">Dark Mode</string>
    <plurals name="numberOfComments">
        <item quantity="one">%d comment</item>
        <item quantity="other">%d comments</item>
    </plurals>
    <string name="comments_title">Comments</string>
    <string name="view_all_comments">View all comments (%d)</string>
    <string name="write_comment">Write a Comment</string>
    <string name="send">Send</string>
    <string name="hint_name">Your Name</string>
    <string name="hint_email">Your Email Address</string>
    <string name="hint_comment">Your Comment</string>
    <string name="generic_error">Something went wrong!</string>
    <string name="name_validation">Please enter your name</string>
    <string name="comment_validation">Please enter your comment</string>
    <string name="email_validation_format">Invalid format of email address</string>
    <string name="email_validation_empty">Please enter your email</string>
    <string name="email_validation_short">Email is too short</string>
    <string name="no_data">Uups, no data!</string>
    <string name="no_comments_to_display">There are no comments to display</string>
    <string name="no_bookmarks">Add something to bookmarks
        \nby taping on bookmark icon</string>
    <string name="no_posts_to_display">There are no posts to display</string>
    <string name="share_via">Share via</string>
    <string name="image_desc_menu_icon">Menu icon</string>
    <string name="image_desc_icon">Icon</string>
    <string name="image_desc_back_button">Back button</string>
    <string name="image_desc_background">Background</string>

    <string name="wizard_finish">Finish</string>
    <string name="wizard_skip">Skip</string>
    <string name="wizard_get_started">Started</string>
    <string name="wizard_page_one_title">Magic</string>
    <string name="wizard_page_one_subtitle">Make mobile application from your Wordpress web</string>
    <string name="wizard_page_two_title">Design</string>
    <string name="wizard_page_two_subtitle">Fresh &amp; stylish design for your mobile news app</string>
    <string name="wizard_page_three_title">Code</string>
    <string name="wizard_page_three_subtitle">Well written code with online documentation</string>
    <string name="progress_loading">Loading&#8230;</string>
    <string name="choose_lang">Choose language</string>
    <string name="back_exit_text">Please click BACK again to exit</string>

    <string name="search_hint">Start searching&#8230;</string>

    <string name="hash_tag">#%s</string>
    <string name="hash_tag_search">Filter Tag: #%s</string>
    <string name="notification">Notifications</string>

    <string name="check_internet_connection">Please check your internet connection and try again</string>

    <string name="settings_recent_list">Recent news list type</string>
    <string name="settings_view_all">View all list type</string>
    <string name="settings_search">Search list type</string>
    <string name="settings_notification">Notification list type</string>
    <string name="settings_recent_list_from_post">List type in post screen</string>
    <string name="settings_bookmark">Bookmark list type</string>
    <string name="settings_category">Category list type</string>

    <string name="settings_dialog_title">Tap to choose list type</string>
</resources>
