<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_home"
                android:title="@string/menu_home"/>
        <item
                android:id="@+id/nav_category"
                android:icon="@drawable/ic_categories"
                android:title="@string/menu_category"/>
        <item
                android:id="@+id/nav_bookmark"
                android:icon="@drawable/ic_bookmark_menu"
                android:title="@string/menu_bookmark"/>
        <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_about_app"
                android:title="@string/menu_about"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings"/>
    </group>
</menu>
