<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="@dimen/large_padding"
        android:paddingEnd="@dimen/large_padding">

    <TextView
            style="@style/TitleTextStyle"
            android:text="@string/enable_push_notification"
            app:layout_constraintBottom_toBottomOf="@+id/divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
            android:id="@+id/cbNotifications"
            style="@style/CheckBoxStyle"
            app:layout_constraintBottom_toBottomOf="@+id/divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/tab_indicator_height"
            android:layout_marginTop="@dimen/large_padding"
            android:background="@color/colorMenuItem"
            app:layout_constraintTop_toBottomOf="@+id/cbNotifications" />

    <TextView
            android:id="@+id/tvEnableRtl"
            style="@style/TitleTextStyle"
            android:text="@string/testing_rtl"
            app:layout_constraintBottom_toBottomOf="@+id/divider2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

    <CheckBox
            android:id="@+id/cbEnableRtl"
            style="@style/CheckBoxStyle"
            app:layout_constraintBottom_toBottomOf="@+id/divider2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

    <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/tab_indicator_height"
            android:layout_marginTop="@dimen/large_padding"
            android:background="@color/colorMenuItem"
            app:layout_constraintTop_toBottomOf="@+id/tvEnableRtl" />

    <TextView
            android:id="@+id/tvEnableLanguage"
            style="@style/TitleTextStyle"
            android:text="@string/language"
            app:layout_constraintBottom_toBottomOf="@+id/divider3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <TextView
            android:id="@+id/tvLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textSize="@dimen/text_size_18sp"
            android:drawableEnd="@drawable/ic_arrow_drop_down_24dp"
            android:drawablePadding="@dimen/small_padding"
            android:textColor="?attr/colorTitleText"
            android:layout_marginStart="@dimen/normal_margin"
            android:layout_marginEnd="@dimen/normal_margin"
            app:layout_constraintBottom_toBottomOf="@+id/divider3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="@dimen/tab_indicator_height"
            android:layout_marginTop="@dimen/large_padding"
            android:background="@color/colorMenuItem"
            app:layout_constraintTop_toBottomOf="@+id/tvEnableLanguage" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_padding"
            android:paddingTop="@dimen/normal_padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider3">

        <Button
                android:id="@+id/btnLightMode"
                style="@style/ButtonStyle"
                android:layout_marginEnd="@dimen/large_padding"
                android:layout_weight="0.5"
                android:text="@string/light_mode" />

        <Button
                android:id="@+id/btnDarkMode"
                style="@style/ButtonStyle"
                android:layout_weight="0.5"
                android:text="@string/dark_mode" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>