<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/bookmarkedContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvTitle"
                style="@style/TitleTextStyle"
                android:layout_marginStart="@dimen/screen_padding"
                android:layout_marginTop="@dimen/screen_padding"
                android:text="@string/bookmarked_news"
                app:layout_constraintBottom_toTopOf="@+id/divider"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvClearAll"
                style="@style/ViewAllTextStyle"
                android:layout_marginTop="@dimen/screen_padding"
                android:layout_marginEnd="@dimen/screen_padding"
                android:text="@string/clear_all"
                android:visibility="visible"
                app:layout_constraintBottom_toTopOf="@+id/divider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="@dimen/tab_indicator_height"
                android:layout_marginTop="@dimen/screen_padding"
                app:layout_constraintBottom_toTopOf="@+id/rlItems" />

            <RelativeLayout
                android:id="@+id/rlItems"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/normal_padding"
                app:layout_constraintBottom_toBottomOf="parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvItems"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:nestedScrollingEnabled="false" />
            </RelativeLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/emptyCommentContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:id="@+id/ivBg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/news_icon"/>

            <TextView
                style="@style/TitleTextStyle"
                android:text="@string/no_data"
                android:textSize="@dimen/text_size_20sp"
                android:layout_marginTop="@dimen/screen_padding"/>

            <TextView
                style="@style/ViewAllTextStyle"
                android:text="@string/no_bookmarks"
                android:gravity="center"
                android:layout_marginTop="@dimen/small_padding"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>