<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
                style="@style/TitleTextStyle"
                android:text="@string/featured_news"
                android:layout_marginStart="@dimen/screen_padding"
                android:layout_marginTop="@dimen/screen_padding"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <TextView
                android:id="@+id/tvFeaturedNewsViewAll"
                style="@style/ViewAllTextStyle"
                android:layout_marginTop="@dimen/screen_padding"
                android:layout_marginEnd="@dimen/screen_padding"
                android:text="@string/view_all"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <androidx.viewpager.widget.ViewPager
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="@dimen/featured_news_height"
                android:clipToPadding="false"
                android:overScrollMode="never"
                android:paddingStart="@dimen/screen_padding"
                android:paddingEnd="@dimen/screen_padding"
                android:layout_marginTop="@dimen/screen_padding"
                app:layout_constraintTop_toBottomOf="@+id/tvFeaturedNewsViewAll" />

        <TextView
                style="@style/TitleTextStyle"
                android:text="@string/recent_news"
                android:layout_marginStart="@dimen/screen_padding"
                android:layout_marginTop="@dimen/screen_padding"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/viewPager" />

        <TextView
                android:id="@+id/tvRecentNewsViewAll"
                style="@style/ViewAllTextStyle"
                android:text="@string/view_all"
                android:layout_marginTop="@dimen/screen_padding"
                android:layout_marginEnd="@dimen/screen_padding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/viewPager" />

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/screen_padding"
                app:layout_constraintTop_toBottomOf="@+id/tvRecentNewsViewAll" >

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvRecentNews"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:nestedScrollingEnabled="false"/>
        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>